api: update openapi schema to get custom inactivity timeout
